	PR rtl-optimization/28096 	* ifcvt.c (check_cond_move_block): Return FALSE if the source of an 	assignment has already been used as a destination earlier in the 	block.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117331 138bc75d-0d04-0410-961f-82ee72b054a4